<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".profile.ProfileFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meet_our_members"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="20dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/zaki_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/zaki_img"
            app:layout_constraintTop_toBottomOf="@+id/title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            app:civ_border_width="5dp"
            app:civ_border_color="@color/blue_light"/>

        <TextView
            android:id="@+id/zaki_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zaki"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/zaki_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/zaki_nim_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zaki_nim"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/zaki_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/johana_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/johana_img"
            app:layout_constraintTop_toBottomOf="@+id/zaki_nim_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            app:civ_border_width="5dp"
            app:civ_border_color="@color/pink"/>

        <TextView
            android:id="@+id/johana_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/johana"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/johana_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/johana_nim_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/johana_nim"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/johana_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/saffa_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/saffa_img"
            app:layout_constraintTop_toBottomOf="@+id/johana_nim_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            app:civ_border_width="5dp"
            app:civ_border_color="@color/red"/>

        <TextView
            android:id="@+id/saffa_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saffa"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/saffa_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/saffa_nim_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saffa_nim"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/saffa_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/stephen_img"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/stephen_img"
            app:layout_constraintTop_toBottomOf="@+id/saffa_nim_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="30dp"
            app:civ_border_width="5dp"
            app:civ_border_color="@color/dark_blue"/>

        <TextView
            android:id="@+id/stephen_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stephen"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/stephen_img"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/stephen_nim_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stephen_nim"
            android:textStyle="bold"
            android:textSize="20sp"
            app:layout_constraintTop_toBottomOf="@+id/stephen_text"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="100dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>